// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer renders ActionsBlock elements as children 1`] = `
Object {
  "blocks": Array [
    Object {
      "elements": Array [
        Object {
          "action_id": "foo",
          "style": undefined,
          "text": Object {
            "emoji": true,
            "text": "Click",
            "type": "plain_text",
          },
          "type": "button",
          "url": undefined,
          "value": undefined,
        },
        Object {
          "alt_text": "alt",
          "image_url": "https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
          "type": "image",
        },
      ],
      "type": "actions",
    },
  ],
}
`;

exports[`renderer renders Markdown with links and user references 1`] = `
Object {
  "text": "link <https://google.com|hi google>\\\\n hi user <@U12345>",
  "type": "mrkdwn",
  "verbatim": false,
}
`;

exports[`renderer renders a Block component without a parent Message 1`] = `
Object {
  "blocks": Array [
    Object {
      "block_id": "section1",
      "text": Object {
        "emoji": true,
        "text": "section \`\`\`code\`\`\`",
        "type": "plain_text",
      },
      "type": "section",
    },
  ],
}
`;

exports[`renderer renders a ButtonElement 1`] = `
Object {
  "action_id": "doAThing",
  "style": undefined,
  "text": Object {
    "emoji": true,
    "text": "Go!",
    "type": "plain_text",
  },
  "type": "button",
  "url": undefined,
  "value": undefined,
}
`;

exports[`renderer renders a Message with Hello, world text 1`] = `
Object {
  "as_user": false,
  "blocks": Array [
    Object {
      "text": Object {
        "emoji": true,
        "text": "Hello, world",
        "type": "plain_text",
      },
      "type": "section",
    },
  ],
  "channel": "test_channel",
  "response_type": "in_channel",
  "token": "test_token",
}
`;

exports[`renderer renders a Message with an array of Blocks 1`] = `
Object {
  "as_user": false,
  "blocks": Array [
    Object {
      "accessory": Object {
        "action_id": "doAThing",
        "style": undefined,
        "text": Object {
          "emoji": true,
          "text": "Go!",
          "type": "plain_text",
        },
        "type": "button",
        "url": undefined,
        "value": undefined,
      },
      "text": Object {
        "emoji": true,
        "text": "section text :sadkeanu:",
        "type": "plain_text",
      },
      "type": "section",
    },
    Object {
      "type": "divider",
    },
    Object {
      "block_id": "section1",
      "text": Object {
        "text": "\`\`\`code\`\`\`",
        "type": "mrkdwn",
        "verbatim": false,
      },
      "type": "section",
    },
  ],
  "channel": "test_channel",
  "response_type": "in_channel",
  "token": "test_token",
}
`;

exports[`renderer renders contextblock children 1`] = `
Object {
  "blocks": Array [
    Object {
      "elements": Array [
        Object {
          "emoji": true,
          "text": "Hello, world",
          "type": "plain_text",
        },
        Object {
          "alt_text": "alt",
          "image_url": "https://api.slack.com/img/blocks/bkb_template_images/beagle.png",
          "type": "image",
        },
      ],
      "type": "context",
    },
  ],
}
`;
